Fix z-index

--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -134,7 +134,7 @@ h6 {
     text-decoration: none;
     position: sticky;
     top: 0;
-    z-index: 0;
+    z-index: 3;
     background-color: var(--background-color);
     padding-left: 20px;
     margin-left: -20px;
